[package]
authors     = ["Hyperspace Network <contact@mvs.org>"]
description = "FRAME pallet based on seq-Phragmén election method."
edition     = "2018"
homepage    = "https://mvs.org/"
license     = "GPL-3.0"
name        = "hyperspace-elections-phragmen"
readme      = "README.md"
repository  = "https://github.com/mvs-org/Hyperspace"
version     = "1.4.0"

[dependencies]
# crates
codec = { package = "parity-scale-codec", version = "1.3.7", default-features = false }
serde = { version = "1.0.124", optional = true }
# hyperspace
hyperspace-support = { default-features = false, path = "../support" }
# substrate
frame-support     = { default-features = false, git = "https://github.com/new-mvs/substrate", branch = "latest" }
frame-system      = { default-features = false, git = "https://github.com/new-mvs/substrate", branch = "latest" }
sp-npos-elections = { default-features = false, git = "https://github.com/new-mvs/substrate", branch = "latest" }
sp-runtime        = { default-features = false, git = "https://github.com/new-mvs/substrate", branch = "latest" }
sp-std            = { default-features = false, git = "https://github.com/new-mvs/substrate", branch = "latest" }

[dev-dependencies]
# crates
hex-literal = { version = "0.3.1" }
# hyperspace
hyperspace-balances = { path = "../balances" }
hyperspace-support  = { path = "../support", features = ["easy-testing"] }
# substrate
sp-core              = { git = "https://github.com/new-mvs/substrate", branch = "latest" }
sp-io                = { git = "https://github.com/new-mvs/substrate", branch = "latest" }
substrate-test-utils = { git = "https://github.com/new-mvs/substrate", branch = "latest" }

[features]
default = ["std"]

std = [
	"crates-std",
	"hyperspace-std",
	"substrate-std",
]

crates-std    = [
	"codec/std",
	"serde",
]
hyperspace-std  = ["hyperspace-support/std"]
substrate-std = [
	"frame-support/std",
	"frame-system/std",
	"sp-npos-elections/std",
	"sp-runtime/std",
	"sp-std/std",
]
