[package]
authors     = ["Metaverse <hello@mvs.org>"]
description = "FRAME EVM contracts pallet"
edition     = "2018"
homepage    = "https://mvs.org/"
license     = "GPL-3.0"
name        = "hyperspace-evm"
readme      = "README.md"
repository  = "https://github.com/hyperspace-network/hyperspace-common/"
version     = "1.3.0"

[dependencies]
# crates
codec                 = { default-features = false, package = "parity-scale-codec", version = "1.3.5" }
evm                   = { default-features = false, git = "https://github.com/darwinia-network/evm.git", branch = "darwinia", features = ["with-codec"] }
evm-gasometer         = { default-features = false, git = "https://github.com/darwinia-network/evm.git", branch = "darwinia" }
evm-runtime           = { default-features = false, git = "https://github.com/darwinia-network/evm.git", branch = "darwinia" }
primitive-types       = { default-features = false, version = "0.7.0", features = ["rlp", "byteorder"] }
rlp                   = { default-features = false, version = "0.4" }
serde                 = { default-features = false, version = "1.0.118", optional = true, features = ["derive"] }
sha3                  = { default-features = false, version = "0.8" }
# hyperspace
hyperspace-balances       = { default-features = false, path = "../balances" }
hyperspace-evm-primitives = { default-features = false, path = "../../primitives/evm" }
# substrate
frame-support    = { default-features = false, git = "https://github.com/darwinia-network/substrate.git", branch = "common-library" }
frame-system     = { default-features = false, git = "https://github.com/darwinia-network/substrate.git", branch = "common-library" }
pallet-timestamp = { default-features = false, git = "https://github.com/darwinia-network/substrate.git", branch = "common-library" }
sp-core          = { default-features = false, git = "https://github.com/darwinia-network/substrate.git", branch = "common-library" }
sp-io            = { default-features = false, git = "https://github.com/darwinia-network/substrate.git", branch = "common-library" }
sp-runtime       = { default-features = false, git = "https://github.com/darwinia-network/substrate.git", branch = "common-library" }
sp-std           = { default-features = false, git = "https://github.com/darwinia-network/substrate.git", branch = "common-library" }

[dev-dependencies]
hyperspace-support = { features = ["easy-testing"], path = "../support" }

[features]
default = ["std"]

std = [
	"crates-std",
	"hyperspace-std",
	"substrate-std",
]

crates-std    = [
	"codec/std",
	"serde",
]
hyperspace-std  = [
	"hyperspace-balances/std",
	"hyperspace-evm-primitives/std",
]
substrate-std = [
	"evm/std",
	"evm/with-serde",
	"evm-gasometer/std",
	"evm-runtime/std",
	"frame-support/std",
	"frame-system/std",
	"pallet-timestamp/std",
	"primitive-types/std",
	"rlp/std",
	"sha3/std",
	"sp-core/std",
	"sp-io/std",
	"sp-runtime/std",
	"sp-std/std",
]
