[package]
authors     = ["Hyperspace Network <contact@mvs.org>"]
description = "Pallet for logging MMR into header digest"
edition     = "2018"
homepage    = "https://mvs.org/"
license     = "GPL-3.0"
name        = "hyperspace-header-mmr"
readme      = "README.md"
repository  = "https://github.com/mvs-org/Hyperspace"
version     = "2.1.0"

[dependencies]
# crates
codec = { package = "parity-scale-codec", version = "2.0.1", default-features = false }
log   = { version = "0.4.14" }
serde = { version = "1.0.124", optional = true }
# hyperspace
hyperspace-header-mmr-rpc-runtime-api = { default-features = false, path = "./rpc/runtime-api" }
hyperspace-relay-primitives           = { default-features = false, path = "../../primitives/relay" }
hyperspace-support                    = { default-features = false, path = "../support" }
# github
merkle-mountain-range = { package = "ckb-merkle-mountain-range", default-features = false, git = "https://github.com/darwinia-network/merkle-mountain-range.git" }
# substrate
frame-support = { default-features = false, git = "https://github.com/darwinia-network/substrate.git", tag = "rococo-v1.1" }
frame-system  = { default-features = false, git = "https://github.com/darwinia-network/substrate.git", tag = "rococo-v1.1" }
sp-runtime    = { default-features = false, git = "https://github.com/darwinia-network/substrate.git", tag = "rococo-v1.1" }
sp-std        = { default-features = false, git = "https://github.com/darwinia-network/substrate.git", tag = "rococo-v1.1" }

[dev-dependencies]
# crates
array-bytes = { version = "1.1.0" }
serde_json  = { version = "1.0.62" }
# substrate
sp-core = { git = "https://github.com/darwinia-network/substrate.git", tag = "rococo-v1.1" }
sp-io   = { git = "https://github.com/darwinia-network/substrate.git", tag = "rococo-v1.1" }

[features]
default = ["std"]

std = [
	"crates-std",
	"hyperspace-std",
	"github-std",
	"substrate-std",
]

crates-std    = [
	"codec/std",
	"serde",
]
hyperspace-std  = [
	"hyperspace-header-mmr-rpc-runtime-api/std",
	"hyperspace-relay-primitives/std",
	"hyperspace-support/std",
]
github-std    = ["merkle-mountain-range/std"]
substrate-std = [
	"frame-support/std",
	"frame-system/std",
	"sp-runtime/std",
	"sp-std/std",
]
