[package]
authors     = ["Metaverse <hello@mvs.org>"]
description = "Ethereum compatibility full block processing emulation pallet for Hyperspace."
edition     = "2018"
homepage    = "https://mvs.org/"
license     = "GPL-3.0"
name        = "mvm-ethereum"
readme      = "README.md"
repository  = "https://github.com/hyperspace-network/hyperspace-common/"
version     = "1.4.0"

[dependencies]
# crates
codec          = { default-features = false, package = "parity-scale-codec", version = "1.3.5" }
ethereum       = { default-features = false, version = "0.5", features = ["with-codec"] }
ethereum-types = { default-features = false, version = "0.9" }
evm            = { default-features = false, features = ["with-codec"], git = "https://github.com/darwinia-network/evm.git", branch = "darwinia" }
libsecp256k1   = { default-features = false, version = "0.3" }
rlp            = { default-features = false, version = "0.4" }
rustc-hex      = { default-features = false, version = "2.1.0" }
serde          = { default-features = false, version = "1.0.118", optional = true }
sha3           = { default-features = false, version = "0.8" }
# hyperspace
hyperspace-balances        = { default-features = false, path = "../balances" }
hyperspace-evm             = { default-features = false, path = "../evm" }
hyperspace-evm-primitives  = { default-features = false, path = "../../primitives/evm" }
hyperspace-support         = { default-features = false, path = "../support" }
mvm-consensus-primitives = { default-features = false, path = "../../primitives/consensus" }
mvm-rpc-runtime-api      = { default-features = false, path = "./rpc/runtime-api" }
# substrate
frame-support    = { default-features = false, git = "https://github.com/darwinia-network/substrate.git", branch = "common-library" }
frame-system     = { default-features = false, git = "https://github.com/darwinia-network/substrate.git", branch = "common-library" }
pallet-timestamp = { default-features = false, git = "https://github.com/darwinia-network/substrate.git", branch = "common-library" }
sp-core          = { default-features = false, git = "https://github.com/darwinia-network/substrate.git", branch = "common-library" }
sp-io            = { default-features = false, git = "https://github.com/darwinia-network/substrate.git", branch = "common-library" }
sp-runtime       = { default-features = false, git = "https://github.com/darwinia-network/substrate.git", branch = "common-library" }
sp-std           = { default-features = false, git = "https://github.com/darwinia-network/substrate.git", branch = "common-library" }

[dev-dependencies]
# crates
hyperspace-evm-precompile    = { default-features = false, path = "../evm/precompile" }

[features]
default = ["std"]

std = [
	"crates-std",
	"hyperspace-std",
	"substrate-std",
]

crates-std    = [
	"codec/std",
	"ethereum/std",
	"ethereum-types/std",
	"evm/std",
	"libsecp256k1/std",
	"rlp/std",
	"rustc-hex/std",
	"serde",
	"sha3/std",
]
hyperspace-std  = [
	"hyperspace-balances/std",
	"hyperspace-evm/std",
	"hyperspace-evm-primitives/std",
	"hyperspace-evm-precompile/std",
	"hyperspace-support/std",
	"mvm-consensus-primitives/std",
	"mvm-rpc-runtime-api/std",
]
substrate-std = [
	"frame-support/std",
	"frame-system/std",
	"pallet-timestamp/std",
	"sp-core/std",
	"sp-io/std",
	"sp-runtime/std",
	"sp-std/std",
]
