[package]
authors     = ["Hyperspace Network <contact@mvs.org>"]
description = "FRAME pallet staking"
edition     = "2018"
homepage    = "https://mvs.org/"
license     = "GPL-3.0"
name        = "hyperspace-staking"
readme      = "README.md"
repository  = "https://github.com/mvs-org/Hyperspace"
version     = "1.4.0"

[dependencies]
# crates
codec             = { package = "parity-scale-codec", version = "1.3.7", default-features = false, features = ["derive"] }
rand_chacha       = { version = "0.2", default-features = false, optional = true }
serde             = { version = "1.0.124", optional = true }
static_assertions = { version = "1.1.0" }
# hyperspace
hyperspace-staking-rpc-runtime-api = { default-features = false, path = "./rpc/runtime-api" }
hyperspace-support                 = { default-features = false, path = "../support" }
# github
substrate-fixed = { default-features = false, git = "https://github.com/encointer/substrate-fixed", branch = "master" }
# substrate
frame-support     = { default-features = false, git = "https://github.com/new-mvs/substrate", branch = "latest" }
frame-system      = { default-features = false, git = "https://github.com/new-mvs/substrate", branch = "latest" }
pallet-authorship = { default-features = false, git = "https://github.com/new-mvs/substrate", branch = "latest" }
pallet-session    = { default-features = false, features = ["historical"], git = "https://github.com/new-mvs/substrate", branch = "latest" }
sp-arithmetic     = { default-features = false, git = "https://github.com/new-mvs/substrate", branch = "latest" }
sp-core           = { default-features = false, git = "https://github.com/new-mvs/substrate", branch = "latest" }
sp-io             = { default-features = false, git = "https://github.com/new-mvs/substrate", branch = "latest" }
sp-npos-elections = { default-features = false, git = "https://github.com/new-mvs/substrate", branch = "latest" }
sp-runtime        = { default-features = false, git = "https://github.com/new-mvs/substrate", branch = "latest" }
sp-staking        = { default-features = false, git = "https://github.com/new-mvs/substrate", branch = "latest" }
sp-std            = { default-features = false, git = "https://github.com/new-mvs/substrate", branch = "latest" }

[dev-dependencies]
# crates
rand_chacha = { version = "0.2" }
# hyperspace
hyperspace-balances = { path = "../../frame/balances" }
hyperspace-support  = { features = ["easy-testing"], path = "../support" }
# substrate
pallet-timestamp     = { git = "https://github.com/new-mvs/substrate", branch = "latest" }
sp-storage           = { git = "https://github.com/new-mvs/substrate", branch = "latest" }
sp-tracing           = { git = "https://github.com/new-mvs/substrate", branch = "latest" }
substrate-test-utils = { git = "https://github.com/new-mvs/substrate", branch = "latest" }

[features]
default = ["std"]

std = [
	"crates-std",
	"hyperspace-std",
	"github-std",
	"substrate-std",
]

crates-std    = [
	"codec/std",
	"serde",
]
hyperspace-std  = [
	"hyperspace-staking-rpc-runtime-api/std",
	"hyperspace-support/std",
]
github-std    = ["substrate-fixed/std"]
substrate-std = [
	"frame-support/std",
	"frame-system/std",
	"pallet-authorship/std",
	"pallet-session/std",
	"sp-arithmetic/std",
	"sp-core/std",
	"sp-io/std",
	"sp-npos-elections/std",
	"sp-runtime/std",
	"sp-staking/std",
	"sp-std/std",
]
