[package]
authors     = ["Hyperspace Network <contact@mvs.org>"]
description = "Support code for Hyperspace runtime"
edition     = "2018"
homepage    = "https://mvs.org/"
license     = "GPL-3.0"
name        = "hyperspace-support"
readme      = "README.md"
repository  = "https://github.com/mvs-org/Hyperspace"
version     = "1.4.0"

[dependencies]
# crates
codec                 = { package = "parity-scale-codec", version = "1.3.7", default-features = false, features = ["derive"] }
impl-trait-for-tuples = { version = "0.2.0" }
num-traits            = { version = "0.2.14", default-features = false }
# hyperspace
ethereum-primitives = { default-features = false, path = "../../primitives/ethereum-primitives" }
# substrate
frame-support = { default-features = false, git = "https://github.com/new-mvs/substrate", branch = "latest" }
sp-runtime    = { default-features = false, git = "https://github.com/new-mvs/substrate", branch = "latest" }
sp-std        = { default-features = false, git = "https://github.com/new-mvs/substrate", branch = "latest" }


[features]
default = ["std"]

std = [
	"crates-std",
	"hyperspace-std",
	"substrate-std",
]

crates-std    = [
	"codec/std",
	"num-traits/std",
]
hyperspace-std  = ["ethereum-primitives/std"]
substrate-std = [
	"frame-support/std",
	"sp-runtime/std",
	"sp-std/std",
]

easy-testing = []
