[package]
authors     = ["Hyperspace Network <contact@mvs.org>"]
description = "Support code for Hyperspace runtime"
edition     = "2018"
homepage    = "https://mvs.org/"
license     = "GPL-3.0"
name        = "hyperspace-support"
readme      = "README.md"
repository  = "https://github.com/mvs-org/Hyperspace"
version     = "2.2.0"

[dependencies]
# crates
codec                 = { package = "parity-scale-codec", version = "2.0.1", default-features = false, features = ["derive"] }
impl-trait-for-tuples = { version = "0.2.1" }
num-traits            = { version = "0.2.14", default-features = false }
# hyperspace
ethereum-primitives = { default-features = false, path = "../../primitives/ethereum-primitives" }
# substrate
frame-support = { default-features = false, git = "https://github.com/darwinia-network/substrate.git", tag = "darwinia-v0.10.0" }
sp-runtime    = { default-features = false, git = "https://github.com/darwinia-network/substrate.git", tag = "darwinia-v0.10.0" }
sp-std        = { default-features = false, git = "https://github.com/darwinia-network/substrate.git", tag = "darwinia-v0.10.0" }

[dev-dependencies]
sp-core = { git = "https://github.com/darwinia-network/substrate.git", tag = "darwinia-v0.10.0" }

[features]
default = ["std"]

std = [
	"crates-std",
	"hyperspace-std",
	"substrate-std",
]

crates-std    = [
	"codec/std",
	"num-traits/std",
]
hyperspace-std  = ["ethereum-primitives/std"]
substrate-std = [
	"frame-support/std",
	"sp-runtime/std",
	"sp-std/std",
]

easy-testing = []
