[package]
authors     = ["Hyperspace Network <contact@mvs.org>"]
description = "FRAME pallet to manage treasury"
edition     = "2018"
homepage    = "https://mvs.org/"
license     = "GPL-3.0"
name        = "hyperspace-treasury"
readme      = "README.md"
repository  = "https://github.com/mvs-org/Hyperspace"
version     = "2.1.0"

[dependencies]
# crates
codec = { package = "parity-scale-codec", version = "2.0.1", default-features = false, features = ["derive"] }
serde = { version = "1.0.124", optional = true, features = ["derive"] }
# hyperspace
hyperspace-support = { default-features = false, path = "../support" }
# substrate
frame-support = { default-features = false, git = "https://github.com/darwinia-network/substrate.git", tag = "rococo-v1.1" }
frame-system  = { default-features = false, git = "https://github.com/darwinia-network/substrate.git", tag = "rococo-v1.1" }
sp-runtime    = { default-features = false, git = "https://github.com/darwinia-network/substrate.git", tag = "rococo-v1.1" }
sp-std        = { default-features = false, git = "https://github.com/darwinia-network/substrate.git", tag = "rococo-v1.1" }

[dev-dependencies]
# hyperspace
hyperspace-balances = { path = "../balances" }
# substrate
sp-core    = { git = "https://github.com/darwinia-network/substrate.git", tag = "rococo-v1.1" }
sp-io      = { git = "https://github.com/darwinia-network/substrate.git", tag = "rococo-v1.1" }
sp-storage = { git = "https://github.com/darwinia-network/substrate.git", tag = "rococo-v1.1" }

[features]
default = ["std"]

std = [
	"crates-std",
	"hyperspace-std",
	"substrate-std",
]

crates-std    = [
	"codec/std",
	"serde",
]
hyperspace-std  = ["hyperspace-support/std"]
substrate-std = [
	"frame-support/std",
	"frame-system/std",
	"sp-runtime/std",
	"sp-std/std",
]
