[package]
authors     = ["Metaverse <hello@mvs.org>"]
description = "FRAME pallet for manage vesting"
edition     = "2018"
homepage    = "https://mvs.org/"
license     = "GPL-3.0"
name        = "hyperspace-vesting"
readme      = "README.md"
repository  = "https://github.com/hyperspace-network/hyperspace-common/"
version     = "1.3.0"

[dependencies]
# crates
codec      = { package = "parity-scale-codec", version = "1.3.5", default-features = false, features = ["derive"] }
enumflags2 = { version = "0.6.2" }
serde      = { version = "1.0.118", optional = true }
# substrate
frame-support = { default-features = false, git = "https://github.com/darwinia-network/substrate.git", branch = "common-library" }
frame-system  = { default-features = false, git = "https://github.com/darwinia-network/substrate.git", branch = "common-library" }
sp-runtime    = { default-features = false, git = "https://github.com/darwinia-network/substrate.git", branch = "common-library" }
sp-std        = { default-features = false, git = "https://github.com/darwinia-network/substrate.git", branch = "common-library" }
# hyperspace
hyperspace-support = { default-features = false, path = "../support" }

[dev-dependencies]
# crates
hex-literal = "0.3.1"
# substrate
sp-core    = { git = "https://github.com/darwinia-network/substrate.git", branch = "common-library" }
sp-io      = { git = "https://github.com/darwinia-network/substrate.git", branch = "common-library" }
sp-storage = { git = "https://github.com/darwinia-network/substrate.git", branch = "common-library" }
# hyperspace
hyperspace-balances = { path = "../balances" }

[features]
default = ["std"]

std = [
	"crates-std",
	"hyperspace-std",
	"substrate-std",
]

crates-std    = [
	"codec/std",
	"serde",
]
hyperspace-std  = ["hyperspace-support/std"]
substrate-std = [
	"frame-support/std",
	"frame-system/std",
	"sp-runtime/std",
	"sp-std/std",
]
