[package]
authors     = ["Metaverse <hello@mvs.org>"]
description = "Minimal array/bytes operation for runtime"
edition     = "2018"
homepage    = "https://mvs.org/"
license     = "GPL-3.0"
name        = "array-bytes"
readme      = "README.md"
repository  = "https://github.com/hyperspace-network/hyperspace-common/"
version     = "1.3.0"

[dependencies]
# substrate
sp-std = { default-features = false, git = "https://github.com/darwinia-network/substrate.git", branch = "common-library" }

[features]
default = ["std"]

std = ["substrate-std"]

substrate-std = ["sp-std/std"]
