[package]
authors     = ["Hyperspace Network <contact@mvs.org>"]
description = "Minimal array/bytes operation for runtime"
edition     = "2018"
homepage    = "https://mvs.org/"
license     = "GPL-3.0"
name        = "array-bytes"
readme      = "README.md"
repository  = "https://github.com/mvs-org/Hyperspace"
version     = "1.3.0"

[dependencies]
# substrate
sp-std = { default-features = false, git = "https://github.com/new-mvs/substrate", branch = "latest" }

[features]
default = ["std"]

std = ["substrate-std"]

substrate-std = ["sp-std/std"]
