[package]
authors     = ["Hyperspace Network <contact@mvs.org>"]
description = "Primitives for DVM consensus"
edition     = "2018"
homepage    = "https://substrate.dev"
license     = "Apache-2.0"
name        = "dvm-consensus-primitives"
readme      = "README.md"
repository  = "https://github.com/mvs-org/Hyperspace"
version     = "1.4.0"

[dependencies]
# crates
codec = { package = "parity-scale-codec", version = "1.3.7", default-features = false, features = ["derive"] }
# substrate
sp-core    = { default-features = false, git = "https://github.com/new-mvs/substrate", branch = "latest" }
sp-runtime = { default-features = false, git = "https://github.com/new-mvs/substrate", branch = "latest" }
sp-std     = { default-features = false, git = "https://github.com/new-mvs/substrate", branch = "latest" }

[features]
default = ["std"]

std = [
	"crates-std",
	"substrate-std",
]

crates-std    = ["codec/std"]
substrate-std = [
	"sp-std/std",
	"sp-runtime/std",
	"sp-core/std",
]
