[package]
authors     = ["Hyperspace Network <contact@mvs.org>"]
description = "Primitives for DVM consensus"
edition     = "2018"
homepage    = "https://substrate.dev"
license     = "Apache-2.0"
name        = "dp_consensus"
readme      = "README.md"
repository  = "https://github.com/mvs-org/Hyperspace"
version     = "2.0.0"

[dependencies]
# crates
codec		= { default-features = false, package = "parity-scale-codec", version = "1.3.7", features = ["derive"] }
ethereum 	= { default-features = false, version = "0.6.0", features = ["with-codec"] }
rlp 		= { default-features = false, version = "0.5" }
sha3 		= { default-features = false, version = "0.8" }
# substrate
sp-core    = { default-features = false, git = "https://github.com/new-mvs/substrate.git", branch = "latest" }
sp-runtime = { default-features = false, git = "https://github.com/new-mvs/substrate.git", branch = "latest" }
sp-std     = { default-features = false, git = "https://github.com/new-mvs/substrate.git", branch = "latest" }

[features]
default = ["std"]

std = [
	"crates-std",
	"ethereum/std",
	"rlp/std",
	"sha3/std",
	"substrate-std",
]

crates-std    = ["codec/std"]

substrate-std = [
	"sp-std/std",
	"sp-runtime/std",
	"sp-core/std",
]
